--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 menu:
   Blog: /
   Archive: /archives/
-  GitHub: https://github.com/pinggod
+  GitHub: https://github.com/littlewin-wang
   Rss: /atom.xml
 
 favicon: /favicon.png
 logo: /favicon.png
 
-sign: hard => hard + er 
+sign: SSD FW | 逆行->前端 | 多特死忠
 
 # Comment
 # e.g disqus: seansun
