--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ logo: /favicon.png
 
 sign: SSD FW | 逆行->前端 | 多特死忠
 
+social:
+  github: https://github.com/littlewin-wang
+  twitter: #
+  weibo: #
+
 # Comment
 # e.g disqus: seansun
 disqus:
