--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "hexo-theme-flex",
+  "name": "hexo-theme-casual",
   "version": "1.0.0",
-  "description": "A hexo theme inspired by jekyII theme flex",
+  "description": "A hexo theme inspired by wordpress theme basata",
   "main": "index.js",
   "scripts": {
     "sass": "gulp sass"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/littlewin-wang/hexo-theme-flex"
+    "url": "https://github.com/littlewin-wang/hexo-theme-casual"
   },
   "keywords": [
     "hexo",
     "theme",
-    "flex"
+    "casual"
   ],
   "author": "Littlewin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/littlewin-wang/hexo-theme-flex/issues"
+    "url": "https://github.com/littlewin-wang/hexo-theme-casual/issues"
   },
-  "homepage": "https://github.com/littlewin-wang/hexo-theme-flex#readme",
+  "homepage": "https://github.com/littlewin-wang/hexo-theme-casual#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
