--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ menu:
   info: /about
   rss: /atom.xml
 
-logo: /favicon.png
+avatar: /avatar.png
+favicon: /favicon.png
 aboutme: 朝着前端打怪升级中 | 目前从事闪存产品的固件和测试工具开发工作 | 多特蒙德死忠
 
 social:
