--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ menu:
   info: /about
   rss: /atom.xml
 
+banner: http://7xpot0.com1.z0.glb.clouddn.com/17-2-15/85842234-file_1487150842287_e1fb.jpg
 avatar: /avatar.png
 favicon: /favicon.png
 aboutme: 朝着前端打怪升级中 | 目前从事闪存产品的固件和测试工具开发工作 | 多特蒙德死忠
