--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ ga: UA-65933410-1
 startyear: 2016
 
 # Resume related
-resume: 
+resume:
 
 application: 前端工程师
 
@@ -39,5 +39,8 @@ skill:
   JavaScript: 70%
   HTML: 85%
   CSS: 65%
+  Vue: 70%
+  React: 40%
+  Node.js: 40%
 
 introduction: 我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。<br/> 我目前正在寻找前端工程师的职位，希望找到一只有范的团队，一起完成有范的产品。
