--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@ social:
   mail: mailto:littlewin.wang@gmail.com
 
 # Comment
-# e.g disqus: seansun
-disqus:
+# e.g duoshuo: seansun
 duoshuo: littlewin
 
 # Analytics
