--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ menu:
 banner: http://7xpot0.com1.z0.glb.clouddn.com/17-2-15/6582823-file_1487154778995_647d.jpg
 avatar: /avatar.png
 favicon: /favicon.png
+weixin: /weixin.jpg
 
 social:
   github: http://github.com/littlewin-wang
