--- a/_config.yml
+++ b/_config.yml
@@ -34,16 +34,4 @@ node_sass:
   sourceComments: false
 
 # Resume related
-resume: true
-
-application: 前端工程师
-
-skill:
-  JavaScript: 70%
-  HTML: 85%
-  CSS: 65%
-  Vue: 70%
-  React: 40%
-  Node.js: 40%
-
-introduction: 我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。<br/> 我目前正在寻找前端工程师的职位，希望找到一只有范的团队，一起完成有范的产品。
+resume: 
