--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ social:
   mail: mailto:littlewin.wang@gmail.com
 
 # Comment
-# e.g duoshuo: seansun
-duoshuo: littlewin
+# e.g cloud-tie: "b3bab7bdfd4d4ac795cb0614a2cccf76"
+cloud-tie: "b3bab7bdfd4d4ac795cb0614a2cccf76"
 
 # Analytics
 # google-analytics:
