评论切换到友言

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ social:
   mail: mailto:littlewin.wang@gmail.com
 
 # Comment
-# e.g cloud-tie: "b3bab7bdfd4d4ac795cb0614a2cccf76"
-cloud-tie: "b3bab7bdfd4d4ac795cb0614a2cccf76"
+# e.g uyan: 2128137
+uyan: 2128137
 
 # Analytics
 # google-analytics:
